--- a/pages/templates/blog-template2.html
+++ b/pages/templates/blog-template2.html
@@ -4,70 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>عنوان المقال - سمية السليماني</title>
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="blog.css">
-    <link rel="stylesheet" href="blog-template.css">
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../blog.css">
+    <link rel="stylesheet" href="blog-template2.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700&family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
 </head>
 <body>
    
-    <nav class="blog-navbar">
-        <div class="blog-logo">سمية السليماني</div>
-        <ul class="blog-nav-links">
-            <li><a href="/consultation">احجز استشارتك</a></li>
-            <li><a href="/page2">مشاركات</a></li>
-            <li><a href="/blog">مدونات</a></li>
-        </ul>
-        <div class="blog-nav-trigger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </nav>
 
-    <div class="blog-mobile-nav">
-        <ul class="blog-mobile-links">
-            <li><a href="/page2">مشاركات</a></li>
-            <li><a href="/blog">مدونات</a></li>
-        </ul>
-    </div>
-
-
-    
-
-    <div class="blog-post-container">
-        <div class="social-float">
-            <ul>
-                <li>
-                    <img src="../content/twitter.svg" alt="twitter">
-                </li>
-                <li>
-                    <img src="../content/linkedin.svg" alt="twitter">
-                     
-                </li>
+    <div class="top-header">
+        <nav class="blog-navbar">
+            <div class="blog-logo">سمية السليماني</div>
+            <ul class="blog-nav-links">
+                <li><a href="/consultation">احجز استشارتك</a></li>
+                <li><a href="/page2">مشاركات</a></li>
+                <li><a href="/blog">مدونات</a></li>
             </ul>
-    
+            <div class="blog-nav-trigger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+
+        <div class="blog-mobile-nav">
+            <ul class="blog-mobile-links">
+                <li><a href="/page2">مشاركات</a></li>
+                <li><a href="/blog">مدونات</a></li>
+            </ul>
         </div>
-      
-        <header class="blog-post-header">
-            <div class="blog-post-meta">
-                <span class="blog-post-date">٥ يناير ٢٠٢٤</span>
-                <div class="blog-post-category">التعليم والتطوير</div>
-            </div>
-            <h1 class="blog-post-title">عنوان المقال الرئيسي</h1>
-            <div class="blog-post-author">
-            
-                <div class="author-info">
-                    <span class="author-name">سمية السليماني</span>
-                    <span class="author-title">استشارية تربوية</span>
+
+
+           
+        
+            <header class="blog-post-header">
+                
+                <h1 class="blog-post-title">عنوان المقال الرئيسي</h1>
+                <div class="blog-post-meta">
+                    <span class="blog-post-date">٥ يناير ٢٠٢٤</span>
+                    <div class="blog-post-category">التعليم والتطوير</div>
                 </div>
+                <div class="blog-post-author">
+                    <div class="author-info">
+                        <span class="author-name">سمية السليماني</span>
+                        <span class="author-title">استشارية تربوية</span>
+                    </div>
+                </div>
+            </header>
+
+        </div>
+
+        <div class="blog-post-container">
+
+            <div class="social-float">
+                <ul>
+                    <li>
+                        <img src="../content/twitter.svg" alt="twitter">
+                    </li>
+                    <li>
+                        <img src="../content/linkedin.svg" alt="twitter">
+                        
+                    </li>
+                </ul>
+        
             </div>
-        </header>
 
         <!-- Featured Image -->
         <div class="blog-post-image">
-            <img src="../content/speaking.png" alt="صورة المقال">
+            <img src="../../content/speaking.png" alt="صورة المقال">
         </div>
 
         <!-- Blog Post Content -->
@@ -135,6 +140,7 @@
             <p>جميع الحقوق محفوظة © ٢٠٢٤</p>
         </div>
     </footer>
+</div>
 
     <script src="../js/blog_template.js"></script>
     <script>
