--- a/pages/blog2/blog2.css
+++ b/pages/blog2/blog2.css
@@ -7,6 +7,32 @@
     }
 }
 
+
+.blog-card a{
+    text-decoration: none;
+}
+
+.navbar{
+    width: 80%;
+    margin: auto;
+
+    margin-bottom: 80px;
+}
+
+
+.mobile-nav{
+    display: none;
+    margin-bottom: 60px;
+}
+
+.name-logo a{
+    text-decoration: none;
+}
+
+.mobile-name-logo a{
+    text-decoration: none;
+}
+
 .blog-navbar {
     background: transparent;
     margin: 0rem auto 2rem;
@@ -249,7 +275,7 @@ body {
     width: 90%;
     display: flex;
     justify-content: start;
-    align-items: end;
+    align-items: center;
     gap: 3rem;
     position: relative;
 }
@@ -271,6 +297,22 @@ body {
     font-size: calc(var(--fs-base) + 0.1vw);
     font-family: var(--f-secondary);
 }
+
+
+
+/* .search-blogs input::placeholder{
+    position: relative;
+    top: 10px; 
+}
+
+
+.search-blogs input{
+    height: 40px; 
+    line-height: 40px; 
+    padding-bottom: 10px; 
+    text-align: right; 
+} */
+
 
 .blog-container{
     width: 80%;
@@ -328,7 +370,27 @@ body {
 }
 
 .blog-card {
-   
+   display: flex;
+   flex-direction: column;
+   /* border-bottom: 1px solid rgba(255, 255, 255, 0.2);*/
+   padding-bottom: 2rem; 
+   position: relative;
+ 
+}
+
+.blog-card::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to left, transparent, rgba(255, 255, 255, 0.3), transparent);
+    z-index: -1;
+}
+
+.blog-card-main{
+
     overflow: hidden;
 
     transition: transform 0.3s ease;
@@ -338,13 +400,25 @@ body {
     display: flex;
     flex-direction: row-reverse;
     justify-items: center;
-    justify-content: center;
- 
+    justify-content: start;
 }
 
+.blog-card-footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    padding-right: 2rem;
+    margin-inline: 1rem;
+    gap: 1rem;
+    
+}
 
-
-
+.blog-card-footer a {
+    display: flex;
+    justify-content: end;
+    text-decoration: none;
+}
 
 .blog-card-image {
     width: 50%;
@@ -387,6 +461,10 @@ body {
 
 }
 
+.blog-card-content h2{
+    color: white;
+}
+
 .blog-excerpt {
     font-size: calc(var(--fs-base) + 0.1vw);
     color: #34495e;
@@ -400,11 +478,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
 }
 
 .blog-date {
-    font-size: calc(0.8rem + 0.1vw);
+    font-size: calc(var(--fs-md) + 0.1vw);
     color: #666;
 }
 
@@ -450,18 +528,35 @@ body {
 .read-more {
     
     padding: 0.5rem 1rem;
-    background: linear-gradient(45deg, #ff4081, #ff80ab);
+    background: linear-gradient(45deg, #4417521e, #ff80aa34);
     color: white;
     text-decoration: none;
     border-radius: 25px;
     font-size: calc(0.85rem + 0.1vw);
     transition: all 0.3s ease; 
+    width: 100%;
+    white-space: nowrap;
+    text-decoration: none;
 }
+
+
+.read-more img{
+    width: 20px;
+    height: 20px;
+    transform: rotate(-45deg);
+
+}
+
+
 
 .read-more:hover {
     transform: translateX(-5px);
-    box-shadow: 0 5px 15px rgba(255, 64, 129, 0.2);
+    /* box-shadow: 0 5px 15px rgba(255, 64, 129, 0.2); */
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.219);
+
 }
+
+
 
 /* Responsive adjustments */
 @media (max-width: 1200px) {
@@ -480,9 +575,7 @@ body {
     text-align: right;
 }
 
-.read-more:hover {
-    transform: translateX(5px);
-} 
+
 
 
 
@@ -496,12 +589,6 @@ body {
     cursor: pointer;
 }
 
-.read-more img{
-    width: 20px;
-    height: 20px;
-    transform: rotate(-45deg);
-
-}
 
 
 
@@ -511,7 +598,9 @@ body {
     height: 24px;
     transition: transform 0.3s ease;
     margin-bottom: -6px;
-    transform: scale(1.4)
+    transform: scale(1.4);
+    opacity: 0.6;
+    
 }
 
 .filter-icon:hover {
@@ -607,9 +696,23 @@ body {
         width: 100%;
         display: flex;
         justify-content: space-around;
+        padding-inline: 20px;
+    
         
     }
 
+        
+    .blog-card-footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        margin-inline: 1rem;
+        
+    }
+
+   
 
 
     .blog-card-image {
@@ -634,7 +737,7 @@ body {
 
     .blog-card h2 {
         font-size: calc(var(--fs-xl) + 0.4vw);
-        color: #2c3e50;
+        color: rgba(255, 255, 255, 0.658);
         margin-bottom: 0rem;
         font-weight: 700;
         font-family: var(--f-main);
@@ -674,6 +777,11 @@ body {
         padding: 4rem 0 2rem;
     }
 
+    .blog-date {
+        font-size: calc(var(--fs-md) + 0.1vw);
+        color: #666;
+    }
+
     .blog-header {
         text-align: center;
         display: flex;
@@ -708,6 +816,14 @@ body {
         height: 23px;
     }
 
+    .read-more img{
+        width: 20px;
+        height: 20px;
+        transform: rotate(45deg);
+    
+    }
+    
+
 
 
 
@@ -741,4 +857,17 @@ body {
     }
     
     
+}
+
+
+
+
+@media (max-width: 1200px) {
+    .navbar{
+        display: none;
+    }
+
+    .mobile-nav{
+        display: unset;
+    }
 }
