--- a/styles.css
+++ b/styles.css
@@ -2752,10 +2752,11 @@ font-size: calc(var(--fs-md) + 0.2vw);
         height: 10vh;
         width: 100vw;
         position: absolute;
-        opacity:0.5;
+        opacity:0.9;
         top: 0%;
         left: 0%;
         background: url('./content/pattern.png') no-repeat;
+        background-position: center;
         background-size:cover;
         background-attachment: fixed;
         z-index: -1;
